--- a/src/main/resources/templates/showQuestion.html
+++ b/src/main/resources/templates/showQuestion.html
@@ -213,7 +213,7 @@
                     <td title="${res[i].title}">${res[i].title}</td>
                     <td title="${res[i].creationDate}">${res[i].creationDate}</td>
                     <td><button onclick='deleteQuestion(${res[i].id})' class='b-d'>Delete</button></td>
-                    <td><a href="http://localhost:8083/updateQuestion?id=${res[i].id}" class='b-q btn btn-success'>Update</a></td>
+                    <td><a href="http://localhost:8083/updateQuestion?id=${res[i].id}" class='b-u btn btn-primary'>Update</a></td>
 
                     `;
             tbody.appendChild(row);
