--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -6,32 +6,38 @@
     <title>صفحه ورود</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
     <style>
         body {
             background-color: #e3f2fd;
             direction: rtl;
         }
+
         .login-card {
             max-width: 550px;
             margin: 100px auto;
             padding: 40px;
             border-radius: 20px;
-            box-shadow: 0px 6px 16px rgba(0,0,0,0.15);
+            box-shadow: 0px 6px 16px rgba(0, 0, 0, 0.15);
             background-color: white;
             height: 500px;
         }
+
         .btn-primary {
             background-color: #1976d2;
             border: none;
         }
+
         .btn-primary:hover {
             background-color: #1565c0;
         }
+
         .form-label {
             margin-bottom: 10px;
             font-weight: 500;
         }
+
         .form-control {
             padding: 12px;
         }
@@ -40,9 +46,22 @@
 <body>
 
 <div class="container">
+    <div class="toast-container position-fixed top-0 end-0 p-3">
+        <div id="errorToast" class="toast align-items-center text-bg-danger border-0" role="alert" aria-live="assertive"
+             aria-atomic="true">
+            <div class="d-flex">
+                <div class="toast-body" id="toastMessage">
+                    خطا رخ داده است
+                </div>
+                <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast"
+                        aria-label="Close"></button>
+            </div>
+        </div>
+    </div>
+
     <div class="login-card d-flex flex-column justify-content-center">
         <h2 class="text-center text-primary mb-4">ورود به حساب</h2>
-        <form>
+        <div>
             <div class="mb-4">
                 <label for="username" class="form-label">نام کاربری</label>
                 <input type="text" class="form-control" id="username" placeholder="نام کاربری خود را وارد کنید">
@@ -51,11 +70,37 @@
                 <label for="password" class="form-label">رمز عبور</label>
                 <input type="password" class="form-control" id="password" placeholder="رمز عبور خود را وارد کنید">
             </div>
-            <button type="submit" class="btn btn-primary w-100 fs-5 py-2">ورود</button>
-        </form>
+            <button onclick="login();" class="btn btn-primary w-100 fs-5 py-2">ورود</button>
+        </div>
     </div>
 </div>
 
+<script>
+    function login() {
+        const username = document.getElementById("username").value;
+        const password = document.getElementById("password").value;
+        fetch(`http://localhost:8083/users/login?username=${username}&password=${password}`, {
+            method: "POST",
+            headers: {
+                "Content-type": "application/json"
+            }
+        })
+            .then(async res => {
+                if (res.status != "200") {
+                    showErrorToast('کاربر مورد نظر یافت نشد')
+                    return;
+                }
+                window.location.replace("http://localhost:8083");
+            })
+    }
+
+    function showErrorToast(message) {
+        document.getElementById("toastMessage").textContent = message;
+        const toastElement = document.getElementById("errorToast");
+        const toast = new bootstrap.Toast(toastElement);
+        toast.show();
+    }
+</script>
 <!-- Bootstrap JS -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
