--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -79,27 +79,19 @@
     function login() {
         let username = document.getElementById("username").value;
         let password = document.getElementById("password").value;
-        fetch("http://localhost:8083/users/login", {
+        fetch(`http://localhost:8083/users/login?username=${username}&password=${password}`, {
             method: "POST",
             headers: {
                 "Content-type": "application/json"
             },
-            body: JSON.stringify({ username, password })
         })
             .then(async res => {
                 if (res.status !== 200) {
-                    const response = await res.json();
-                    console.log(response);
                     showErrorToast('کاربر مورد نظر یافت نشد')
                     return;
                 }
-                return res.json();
+                window.location.replace("http://localhost:8083");
             })
-            .then(res => {
-                if(res) {
-                    window.location.replace("http://localhost:8083");
-                }
-            });
     }
 
     function showErrorToast(message) {
